image sharing control

--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -30,16 +30,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/messageTime"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="2dp"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
-            android:visibility="visible" />
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/messageImageShareable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_partial_secure"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/messageImageNotShareable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_secure"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/messageTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/messageText"
@@ -64,7 +83,7 @@
             android:adjustViewBounds="true"
             android:visibility="gone" />
 
-              <TextView
+        <TextView
             android:id="@+id/messageMimeType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,6 +94,7 @@
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:visibility="gone" />
+
         <TextView
             android:id="@+id/messageId"
             android:layout_width="wrap_content"
@@ -86,8 +106,6 @@
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:visibility="gone" />
-
-  
 
         <TextView
             android:id="@+id/messageToVersion"
@@ -137,7 +155,7 @@
             android:textSize="16sp"
             android:visibility="gone" />
 
-     
+
     </LinearLayout>
 
 </LinearLayout>
