--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -39,16 +39,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/messageTime"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="2dp"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
-            android:visibility="visible" />
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/messageImageShareable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_partial_secure"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/messageImageNotShareable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_secure"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/messageTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/messageText"
