--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -32,12 +32,15 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical" >
 
             <ImageView
                 android:id="@+id/messageImageShareable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="1dp"
                 android:src="@android:drawable/ic_partial_secure"
                 android:visibility="gone" />
 
@@ -45,6 +48,8 @@
                 android:id="@+id/messageImageNotShareable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="1dp"
                 android:src="@android:drawable/ic_secure"
                 android:visibility="gone" />
 
@@ -54,7 +59,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
-                android:layout_marginTop="2dp"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
                 android:visibility="visible" />
@@ -154,8 +158,6 @@
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:visibility="gone" />
-
-
     </LinearLayout>
 
 </LinearLayout>
