--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -35,11 +35,11 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="identity management" >
         <Preference android:title="@string/import_identity_label" >
-            <intent android:action="com.twofours.surespot.activities.ImportIdentityActivity" >
+            <intent android:action="com.twofours.surespot.identity.ImportIdentityActivity" >
             </intent>
         </Preference>
         <Preference android:title="@string/export_identity_label" >
-            <intent android:action="com.twofours.surespot.activities.ExportIdentityActivity" >
+            <intent android:action="com.twofours.surespot.identity.ExportIdentityActivity" >
             </intent>
         </Preference>
         <Preference android:title="@string/key_management" >
