external invites handle INSTALL_REFERRER send auto add token to server on login or signup

--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -24,7 +24,7 @@
         android:singleLine="true" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tbInviteViaLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="password" />
