--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:imeOptions="actionNext" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tbInviteViaLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="password" />
