--- a/res/layout/contact_entry_data.xml
+++ b/res/layout/contact_entry_data.xml
@@ -3,10 +3,15 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     android:background="@drawable/abs__list_selector_holo_light"
-        
     android:orientation="horizontal" >
 
-   
+    <CheckBox
+        android:id="@+id/contactSelected"
+        android:layout_width="wrap_content"
+        android:focusable="false"
+        android:clickable="false"
+        android:layout_height="wrap_content" />
+
     <!--
          <TextView
         android:layout_gravity="center_vertical"
@@ -31,7 +36,7 @@
 
     <TextView
         android:id="@+id/contactDataType"
-        android:layout_width="50dp"
+        android:layout_width="70dp"
         android:layout_height="30dp"
         android:layout_marginLeft="5dp"
         android:gravity="center_vertical"
