share surespot via send intent allow user to specify auto invite in link

--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -21,7 +21,7 @@
               <item
                 android:id="@+id/menu_invite_external"
                 android:icon="@drawable/ic_menu_friendslist"
-                android:title="external invite"/>
+                android:title="share surespot"/>
                 
             <item
                 android:id="@+id/menu_logout_bar"
