--- a/res/layout/activity_external_invite.xml
+++ b/res/layout/activity_external_invite.xml
@@ -14,21 +14,38 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="20dp" >
+            android:layout_marginTop="10dp" >
 
             <RadioButton
                 android:id="@+id/rbEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="invite via email" />
+                android:text="share via email" />
 
             <RadioButton
                 android:id="@+id/rbInviteSMS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="invite via text message" />
+                android:text="share via text message" />
+
+            <RadioButton
+                android:id="@+id/rbSocial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="share via social media" />
         </RadioGroup>
+
+        <CheckBox
+            android:checked="true"
+            android:id="@+id/cbAutoInvite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/inviteRadioGroup"
+            android:layout_marginTop="10dp"
+            android:text="auto invite me when app installed/opened from this link" />
 
         <TextView
             android:id="@+id/inviteMessageLabel"
@@ -46,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/inviteMessageLabel"
             android:layout_below="@+id/inviteMessageLabel"
+            android:layout_alignParentBottom="true"
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@+id/bSendInvitation"
             android:ems="10"
@@ -60,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/inviteRadioGroup"
+            android:layout_below="@+id/cbAutoInvite"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:text="phone number" />
@@ -80,11 +98,11 @@
             android:id="@+id/invitee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/plus"
             android:layout_alignBottom="@+id/plus"
             android:layout_alignLeft="@+id/tbInviteViaLabel"
             android:layout_alignTop="@+id/plus"
             android:layout_below="@+id/tbInviteViaLabel"
+            android:layout_toLeftOf="@+id/plus"
             android:ems="10"
             android:scrollbars="vertical"
             android:singleLine="true" />
@@ -103,12 +121,12 @@
             android:id="@+id/bSendInvitation"
             android:layout_width="70sp"
             android:layout_height="70sp"
-            android:layout_alignBottom="@+id/inviteMessage"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_alignRight="@+id/bSelectContact"
             android:background="@drawable/send_button"
             android:text="send invite"
             android:textColor="@android:color/black" />
+
     </RelativeLayout>
 
 </ScrollView>
