use custom unlock images

--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
-                android:src="@android:drawable/ic_partial_secure"
+                android:src="@drawable/ic_partial_secure"
                 android:visibility="gone" />
 
             <ImageView
