--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -15,14 +15,17 @@
                 android:icon="@drawable/ic_menu_camera"
                 android:title="@string/capture_image"/>
             <item
-                android:id="@+id/menu_close_bar"
-                android:icon="@drawable/ic_menu_end_conversation"
-                android:title="@string/close_tab"/>
-              <item
                 android:id="@+id/menu_invite_external"
                 android:icon="@drawable/ic_menu_friendslist"
                 android:title="share surespot"/>
-                
+            <item
+                android:id="@+id/menu_close_bar"
+                android:icon="@drawable/ic_menu_end_conversation"
+                android:title="@string/close_tab"/>
+            <item
+                android:id="@+id/menu_clear_messages"
+                android:icon="@drawable/ic_menu_delete"
+                android:title="delete all messages"/>
             <item
                 android:id="@+id/menu_logout_bar"
                 android:icon="@drawable/ic_lock_power_off"
