--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -9,7 +9,8 @@
         android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/etFriend" />
+        android:layout_above="@+id/etFriend"
+        android:drawSelectorOnTop="false" />
 
     <FrameLayout
         android:id="@+id/progressBar"
@@ -105,8 +106,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/bAddFriend"
-        android:imeOptions="flagNoExtractUi|actionDone"
         android:imeActionLabel="invite"
+        android:imeOptions="flagNoExtractUi|actionDone"
         android:inputType="textNoSuggestions"
         android:singleLine="true"
         android:textSize="20sp" />
