overflow menu item toast

--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -4,6 +4,7 @@
         android:id="@+id/item_overflow"
         android:icon="@drawable/ic_menu_overflow"
         android:orderInCategory="100"
+        android:title="options"
         android:showAsAction="always">
         <menu>
             <item
