--- a/res/menu/activity_login.xml
+++ b/res/menu/activity_login.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:title="options"
         android:id="@+id/item_overflow"
         android:icon="@drawable/ic_menu_overflow"
         android:orderInCategory="100"
