--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -6,12 +6,14 @@
             android:title="version" >
         </Preference>
     </PreferenceCategory>
-<!--     <PreferenceCategory android:title="display" >
+    <!--
+         <PreferenceCategory android:title="display" >
         <CheckBoxPreference
             android:key="pref_hide_deleted_messages"
             android:title="hide deleted messages" >
         </CheckBoxPreference>
-    </PreferenceCategory> -->
+    </PreferenceCategory>
+    -->
     <PreferenceCategory android:title="@string/notifications_title" >
         <CheckBoxPreference
             android:defaultValue="true"
@@ -34,12 +36,16 @@
             android:title="@string/notifications_led" />
     </PreferenceCategory>
     <PreferenceCategory android:title="identity management" >
-        <Preference android:title="@string/import_identity_label" >
-            <intent android:action="com.twofours.surespot.identity.ImportIdentityActivity" >
+        <Preference android:title="change password..." >
+            <intent android:action="com.twofours.surespot.identity.ChangePasswordActivity" >
             </intent>
         </Preference>
         <Preference android:title="@string/export_identity_label" >
             <intent android:action="com.twofours.surespot.identity.ExportIdentityActivity" >
+            </intent>
+        </Preference>
+        <Preference android:title="@string/import_identity_label" >
+            <intent android:action="com.twofours.surespot.identity.ImportIdentityActivity" >
             </intent>
         </Preference>
         <Preference android:title="@string/delete_identity" >
