--- a/res/drawable/empty_blue_rectangle.xml
+++ b/res/drawable/empty_blue_rectangle.xml
@@ -2,9 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
+     <solid android:color="#000000"></solid>
+    
     <stroke
         android:width="1dp"
         android:color="#FFBBBBBB" >
     </stroke>
+    
+    
    </shape>
    
