--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -36,13 +36,12 @@
             android:title="@string/notifications_led" />
     </PreferenceCategory>
     <PreferenceCategory android:title="identity management" >
-        <CheckBoxPreference            
-            android:defaultValue="false"            
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="pref_auto_android_backup_enabled"
-            
             android:title="auto backup/restore identities using android backup" />
 
-        <Preference android:title="change password..." >
+        <Preference android:title="change password..."  >
             <intent android:action="com.twofours.surespot.identity.ChangePasswordActivity" >
             </intent>
         </Preference>
@@ -66,8 +65,16 @@
     <PreferenceCategory android:title="debug" >
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="pref_logging"
+            android:title="logging" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="acra.enable"          
+            android:title="crash reporting" />
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="pref_debug_mode"
-            android:title="debug mode" />
+            android:title="message debug mode" />
     </PreferenceCategory>
 
 </PreferenceScreen>
