always send crash report on my stock epic 4g touch the system reboots on unhandled exception

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -67,10 +67,10 @@
             android:defaultValue="false"
             android:key="pref_logging"
             android:title="logging" />
-        <CheckBoxPreference
+   <!--      <CheckBoxPreference
             android:defaultValue="true"
             android:key="acra.enable"          
-            android:title="crash reporting" />
+            android:title="crash reporting" /> -->
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_debug_mode"
