gzip compress files default constants for logging and crash reporting

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -64,7 +64,7 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="debug" >
         <CheckBoxPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="pref_logging"
             android:title="logging" />
    <!--      <CheckBoxPreference
