get rid of flagNoExtractUi

--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:imeOptions="flagNoExtractUi|actionNext"
+        android:imeOptions="actionNext"
         android:inputType="textPassword"
         android:singleLine="true" />
 
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:imeOptions="flagNoExtractUi|actionNext"
+        android:imeOptions="actionNext"
         android:inputType="textPassword"
         android:singleLine="true" />
 
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:imeOptions="flagNoExtractUi|actionDone"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:singleLine="true" />
 
