--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:imeOptions="flagNoExtractUi|actionDone"
+        android:imeOptions="actionDone"
         android:imeActionLabel="login"
         android:inputType="textPassword"
         android:singleLine="true" />
