--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -14,6 +14,7 @@
         </CheckBoxPreference>
     </PreferenceCategory>
     -->
+    
     <PreferenceCategory android:title="@string/notifications_title" >
         <CheckBoxPreference
             android:defaultValue="true"
@@ -35,13 +36,23 @@
             android:key="pref_notifications_led"
             android:title="@string/notifications_led" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="confirmations" >
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_delete_message"
+            android:title="delete message" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_delete_all_messages"
+            android:title="delete all messages" />
+    </PreferenceCategory>
     <PreferenceCategory android:title="identity management" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_auto_android_backup_enabled"
             android:title="auto backup/restore identities using android backup" />
 
-        <Preference android:title="change password..."  >
+        <Preference android:title="change password..." >
             <intent android:action="com.twofours.surespot.identity.ChangePasswordActivity" >
             </intent>
         </Preference>
@@ -67,10 +78,12 @@
             android:defaultValue="true"
             android:key="pref_logging"
             android:title="logging" />
-   <!--      <CheckBoxPreference
+        <!--
+             <CheckBoxPreference
             android:defaultValue="true"
             android:key="acra.enable"          
-            android:title="crash reporting" /> -->
+            android:title="crash reporting" />
+        -->
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_debug_mode"
