identity management activities layout cleanup

--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -6,13 +6,21 @@
     android:padding="10dip"
     tools:context=".ChangePasswordActivity" >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dip"
+        android:text="select identity" />
+
     <Spinner
+        android:layout_marginTop="5dp"
         android:id="@+id/identitySpinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="40dp"
+        android:textSize="16sp" >
     </Spinner>
-    
-     <TextView
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
