--- a/res/layout/activity_import_identity.xml
+++ b/res/layout/activity_import_identity.xml
@@ -2,18 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical"
     tools:context=".ImportIdentityActivity" >
 
     <TextView
         android:id="@+id/foundText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:textSize="16dp" />
 
     <ListView
         android:id="@+id/lvIdentities"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp" >
     </ListView>
 
 </LinearLayout>
