--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -3,22 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context=".ExportIdentityActivity" >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dip"
+        android:text="select identity" />
 
     <Spinner
         android:id="@+id/identitySpinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="40dp"
+        android:layout_marginBottom="5dp"        
+        android:textSize="16dp" >
     </Spinner>
 
     <Button
         android:id="@+id/bExportSd"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/export_sd" >
+        android:text="@string/export_sd"
+        android:textSize="16dp" >
     </Button>
 
-    
-    
-    
 </LinearLayout>
