--- a/res/layout/activity_manage_keys.xml
+++ b/res/layout/activity_manage_keys.xml
@@ -3,12 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context=".ManageKeysActivity" >
 
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dip"
+        android:text="select identity" />
+    
     <Spinner
+        
         android:id="@+id/identitySpinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="40dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="16dp" >
     </Spinner>
 
     <Button
