--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -9,8 +9,8 @@
         android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/etFriend"
-       />
+        android:background="@android:color/transparent"
+        android:layout_above="@+id/etFriend" />
 
     <FrameLayout
         android:id="@+id/progressBar"
