--- a/res/drawable/empty_blue_circle.xml
+++ b/res/drawable/empty_blue_circle.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="@color/abs__holo_blue_light" >
+        android:color="@color/surespotBlue" >
     </stroke>
 
 </shape>
