--- a/res/drawable/filled_blue_circle.xml
+++ b/res/drawable/filled_blue_circle.xml
@@ -3,7 +3,7 @@
     android:shape="oval" >
 
 
-    <solid android:color="@color/abs__holo_blue_light">
+    <solid android:color="@color/surespotBlue">
     </solid>
 
 </shape>
