--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -21,7 +21,7 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="50dp"
-        android:background="@color/abs__holo_blue_light"
+        android:background="@color/surespotBlue"
         android:visibility="visible" >
     </View>
 
