--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,4 +27,56 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/bEmoji"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginBottom="-10sp"
+            android:layout_marginLeft="-10sp"
+            android:background="@drawable/send_button"
+            android:text="emoji"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/etMessage"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:imeActionLabel="send"
+            android:imeOptions="actionSend"
+            android:inputType="textMultiLine"
+            android:maxHeight="150sp"
+            android:minHeight="45sp" >
+        </EditText>
+
+        <Button
+            android:id="@+id/bSend"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginBottom="-10sp"
+            android:layout_marginRight="-10sp"
+            android:background="@drawable/send_button"
+            android:text="@string/home"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
+
+    <GridView
+        android:id="@+id/fEmoji"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:columnWidth="64dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="none"
+        android:verticalSpacing="10dp"
+        android:visibility="gone" >
+    </GridView>
+
 </LinearLayout>
