--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.twofours.surespot.chat.MainActivityLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chatLayout"
@@ -69,7 +69,7 @@
         android:id="@+id/fEmoji"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
         android:columnWidth="64dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
@@ -79,4 +79,4 @@
         android:visibility="gone" >
     </GridView>
 
-</LinearLayout>
+</com.twofours.surespot.chat.MainActivityLayout>
