--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
     <GridView
         android:id="@+id/fEmoji"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:columnWidth="64dp"
         android:gravity="center"
