--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="5dip"
         android:imeOptions="actionDone"
         android:imeActionLabel="login"
-        android:inputType="textPassword"
+        android:inputType="textPassword|textNoSuggestions"
         android:singleLine="true" />
 
     <Button
