--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:imeOptions="actionNext"
-        android:inputType="textPassword"
+        android:inputType="textPassword|textNoSuggestions"
         android:singleLine="true" />
 
     <TextView
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:inputType="textPassword|textNoSuggestions"
         android:singleLine="true" />
 
     <Button
