--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -44,4 +44,19 @@
     </RelativeLayout>
 
 
+    
+    <!--     <EditText
+            android:id="@+id/etMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@+id/bSend"
+            android:layout_toRightOf="@+id/bEmoji"
+            android:imeActionLabel="send"
+            android:imeOptions="actionSend"
+            android:inputType="textMultiLine"
+            android:maxHeight="150sp"
+            android:minHeight="45sp" >
+        </EditText>
+     -->
 </RelativeLayout>
